modified the sketch area to work based on click and holding the mouse button instead of just hovering. Fixed the reset button code that was created after modifying the elements alignment in html

--- a/style.css
+++ b/style.css
@@ -43,11 +43,17 @@
     grid-gap: 0px;
 }
 
-/*.gridSquare {
-    width: 25px;
-    height: 25px;
+.toolBarColor {
     border: 1px solid black;
-} */
+}
+
+.toolBarColor:hover {
+    border: 1px solid lightblue;
+}
+
+.gridSquare:hover, .toolBarColor:hover {  
+    cursor: pointer;
+} 
 
 body {
     display: flex;
